# sbom-viewer

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  README.md  main.py  pyproject.toml  sbom-viewer.spec
.github/workflows/: code-quality.yaml  e2e-tests.yaml  installer-build-test.yaml  installer-release-publish.yaml  integration-tests.yaml  pyinstaller-build-test.yaml  pyinstaller-release-publish.yaml  release.yaml  unit-tests.yaml
app/: models.py  presentation.py  presenter.py  sbom_types.py  search_mixin.py  view.py
app/parsers/: __init__.py  base_parser.py  cyclonedx_parser.py  spdx_parser.py  swid_parser.py
assets/icons/: sbom-viewer.icns
docs/: Gemfile  _config.yml  index.markdown
docs/_posts/: 2026-04-29-welcome-to-jekyll.markdown
docs/assets/css/: style.scss
docs/assets/js/: downloads.js
scripts/: build_deb.py  build_dmg.py  build_msi.py  get_project_version.py  package_pyinstaller_dist.py  smoke_test_deb.py  smoke_test_dmg.py  smoke_test_msi.py  smoke_test_pyinstaller.py
tests/: conftest.py  support.py
tests/e2e/: test_app_process.py
tests/fixtures/sboms/cyclonedx/: cdx-1.5.xml  cdx-1.6.xml
tests/fixtures/sboms/spdx/: spdx-2.2.json
tests/fixtures/sboms/swid/: swid2.xml  swid5.xml  swid6.xml
tests/integration/: generate_expected_gui_snapshots.py  test_app_flow.py  test_gui_snapshots.py  test_snapshot_generator.py  test_view.py
tests/unit/: test_build_deb.py  test_build_dmg.py  test_build_msi.py  test_models.py  test_package_pyinstaller_dist.py  test_parsers.py  test_presenter.py  test_smoke_test_dmg.py
(+20 files in other folders)
